east2/app/dr-fed-failover.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: fed-failover
  namespace: east2-mesh-member
spec:
  host: "kube-info.east2-mesh-member.svc.cluster.local"
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failover:
          - from: east2-fed
            to: west-fed
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 15s
