east2/app/vs-server-side-lb.yml

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-server-side-lb
  namespace: east2-mesh-member
spec:
  hosts:
  - "*"
  gateways:
  - east2-istio-system/ootb-gateway
  http:
  - match:
    - uri:
        prefix: /info
  
    route:
    - destination:
        host: kube-info
        port:
          number: 8080
      weight: 0
    - destination:

        # oc -n east2-istio-system get importedservicesets west -o json | jq -r .status.importedServices[].localService.hostname
        host: kube-info-west.east2-mesh-member.svc.west-imports.local

        port:
          number: 8080
      weight: 100
